@@ -1,3 +1,8 @@
+2006-11-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/ScratchPad.py: Fix signal connection and dbstate vs. db confusion;
+	Add more checks for is_valid; This should now remove stale objects on
+	delete or database change.
+
 2006-10-31  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_RelationView.py: add right context menu
 	* src/DataViews/_PersonView.py: fix typo
